resources.tf
# Define SSH key pair for our instances
resource "aws_key_pair" "default" {
  key_name = "region-nyc"
  public_key = file(var.key_path)
}

# Define webserver inside the public subnet
# resource "aws_instance" "wb" {
#    ami  = lookup(var.ami, var.aws_region)
#    instance_type = "t1.micro"
#    key_name = aws_key_pair.default.id
#    subnet_id = aws_subnet.public-subnet.id
#    vpc_security_group_ids = [aws_security_group.sgweb.id]
#    associate_public_ip_address = true
#    source_dest_check = false

#   tags = {
#     Name = "webserver"
#   }
# }

# Define database inside the private subnet
# resource "aws_instance" "db" {
#    ami  = lookup(var.ami, var.aws_region)
#    instance_type = "t1.micro"
#    key_name = aws_key_pair.default.id
#    subnet_id = aws_subnet.private-subnet.id
#    vpc_security_group_ids = [aws_security_group.sgdb.id]
#    source_dest_check = false

#   tags = {
#     Name = "database"
#   }
# }
